--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 35vh;
+  height: 15vh;
   text-align: center;
 }
 
@@ -157,14 +157,14 @@ img {
 .mv-title {
   font-size: 50px;
   font-weight: bold;
-  line-height: 1.2;
+  /*line-height: 1.2;*/
   margin-bottom: 5px;
   letter-spacing: .1em;
 }
 .mv-subtitle {
   font-size: 20px;
   font-weight: bold;
-  line-height: 1;
+  /*line-height: 1;*/
   margin-bottom: 40px;
   letter-spacing: .08em;
 }
