--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@ body {
   font-family: "Montserrat","Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
   font-size: 15px;
   letter-spacing: .05em;
-  color: #333;
-  
+	color: #f5f5f5; /*white smoke*/
+	background-color: #333333; /*black*/
 }
 
 a {
 	transition: opacity .3s;
 	text-decoration: none;
-	color: #1ca9e3;
+	color: #1ca9e3; /*リンクの色*/
 }
 
 img {
@@ -41,7 +41,7 @@ img {
 }
 
 .section:nth-of-type(odd) {
-  background-color: #f7f7f7;
+	background-color: #4d4d4d; /*gray*/
 }
 
 .container {
@@ -60,7 +60,7 @@ img {
   margin-bottom: 40px;
   text-align: center;
   letter-spacing: .05em;
-  color: #333;
+  color: #f5f5f5;
 }
 
 .lead {
@@ -98,7 +98,7 @@ img {
 
 /*ヘッダー左上Taizo's Portfolioの部分*/
 .header-logo a {
-  color: #333;
+  color: #f5f5f5;
 }
 
 .gnav-list {
@@ -120,7 +120,7 @@ img {
   padding: 5px 0;
   transition: .3s;
   letter-spacing: .05em;
-  color: #333;
+  color: #f5f5f5;
 }
 .gnav-item a:after {
   position: absolute;
@@ -187,7 +187,7 @@ img {
   width: 31.74603%;
   margin-right: 1.58730%;
   margin-bottom: 40px;
-  color: #333;
+  color: #f5f5f5;
 }
 
 .works-item:hover {
@@ -303,7 +303,7 @@ img {
   padding: 10px;
   cursor: pointer;
   text-align: center;
-  background-color: #4c4c4c;
+	background-color: #333333;
 }
 
 .page-top .material-icons-outlined {
@@ -445,7 +445,7 @@ img {
 
   /*  メインビジュアル */
   .mv {
-    height: 20vh;
+    height: 75vh;
   }
 
   .mv-container {
